--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>study-flow-chronicle</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>"CupCake's StudyFlow</title>
+    <meta name="description" content="By Scrollloop.com" />
+    <meta name="LahiruNK" content="Playground" />
 
-    <meta property="og:title" content="study-flow-chronicle" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CupCake's StudyFlow" />
+    <meta property="og:description" content="By Scrollloop.com" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
